ibone_gonzalez/session-02/exercise-03/frontend-policity.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-frontend-allow
  namespace: exercise03
spec:
  podSelector:
    matchLabels:
      type: database
  ingress:
    - from:
        - podSelector:
            matchLabels:
              type: frontend
      ports:
        - protocol: TCP
          port: 3306
